clusters/homelab/kvm-lb/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: kvm-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:lts-alpine
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: config
          configMap:
            name: haproxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: kvm
  namespace: kvm-lb
spec:
  selector:
    app: haproxy
  ports:
    - name: https
      port: 8006
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kvm2
  namespace: kvm-lb
spec:
  selector:
    app: haproxy
  ports:
    - name: https
      port: 8006
      targetPort: 9001
